--- a/environment.yml
+++ b/environment.yml
@@ -2,10 +2,10 @@ name: EE2211
 channels:
   - defaults
 dependencies:
-  - python=3.10
-  - jupyter
   - numpy
-  - matplotlib
+  - jupyter
   - sympy
+  - python=3.10
   - scikit-learn
-prefix: /Users/admin/.conda/envs/EE2211
+  - matplotlib
+prefix: C:\Users\Li Yong\anaconda3\envs\EE2211
