--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,5 @@ poetry.toml
 .ruff_cache/
 
 # End of https://www.toptal.com/developers/gitignore/api/intellij+all,python,jupyternotebooks
+
+*.csv
