--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ torch = "^2.0.0"
 torchvision = "^0.15.1"
 torchaudio = "^2.0.1"
 lightning = "^2.0.1.post0"
+jupyter = "^1.0.0"
 
 
 [build-system]
