--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ torchvision = "^0.15.1"
 torchaudio = "^2.0.1"
 lightning = "^2.0.1.post0"
 jupyter = "^1.0.0"
+pyqt6 = "^6.5.0"
 
 
 [build-system]
